--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,11 @@
 {
     "version": 2,
     "functions": {
-        "public/index.php": { "runtime": "vercel-php@0.3.1" }
+        "api/index.php": { "runtime": "vercel-php@0.3.1" }
     },
     "routes": [{
         "src": "/(.*)",
-        "dest": "/public/index.php"
+        "dest": "/api/index.php"
     }],
     "env": {
         "APP_ENV": "production",
